--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,20 +8,57 @@
 </head>
 <meta charset="UTF-8"></meta>
 
-<body>
-	<form th:action="@{/login/post}" method="post">
-		<label for="username">Username:</label>
-		<input type="text" name="username">
-		
-		<label for="clave">Password:</label>
-		<input type="password" name="clave">
-		
-		<input type="submit" value="Iniciar Sesión">
-		<p th:if="${error}" th:text="${error}"></p>
-		
-	</form>
-	<a th:href="@{/registro}">Registro</a>
-	
+<body class="overflow-hidden">
+    <div class="grid-login">
+        <div class="hero-bienvenida">
+            <div class="contenedor">
+                <div class="contenido-bienvenida">
+                    <h2>Bienvenido a <br> E-Parking</h2>
+                    <p>Tu aliado en la busqueda de estacionamientos <br> disponibles al alcance de un click. </p>
+                    <div class="centrar-text">
+                        <img th:src="@{/img/laptopconweb.png}" alt="imagen laptop">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hero-login">
+            <div class="contenedor">
+                <div class="btn-registrarse">
+                    <a th:href="@{/registro}">Registrarse</a>
+                </div>
+                <form th:action="@{/login/post}" method="post">
+                    <div class="contenedor-input">
+                        <label for="username">Username:</label>
+                        <input type="text" name="username" id="username" placeholder="&#xf406;">
+                        <div class="checkbox">
+                            <input type="checkbox" id="recordar" name="recordar" value="1">
+                            <label for="recordar">Recordar usuario</label>
+                        </div>
+
+                    </div>
+                    <div class="contenedor-input">
+                        <label for="clave">Password:</label>
+                        <input type="password" name="clave" id="clave" placeholder="&#xf13e;">
+                    </div>
+                    <div class="enlaces-login">
+                        <a href="#">Olvide mi contraseña</a>
+                        <a href="#">Cambiar mi contraseña</a>
+                    </div>
+
+                    <div class="centrar-text">
+                        <input type="submit" value="Ingresar">
+                        <p th:if="${error}" th:text="${error}"></p>
+                    </div>
+
+
+
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 </body>
 
 </html>
