--- a/src/main/resources/templates/registro.html
+++ b/src/main/resources/templates/registro.html
@@ -9,61 +9,85 @@
 </head>
 <meta charset="UTF-8"></meta>
 
-<body>
-	<div class="contenedor">
-		<h1>Registro</h1>
-		<form th:action="@{/registro/save}" th:object="${usuario}"  method="post">
-			<div>
-				<div>
-					<label for="nombres">Nombres:</label> <input type="text"
-						th:field="*{nombres}">
-					<p th:if="${#fields.hasErrors('nombres')}" th:errors="*{nombres}"></p>
-				</div>
+<<body class="overflow-hidden registro">
+    <div class="hero-header">
+        <div class="contenedor">
+            <a th:href="@{/login}">Iniciar Sesión</a>
+        </div>
+    </div>
+    <div class="fondo-imagen-registro-cliente">
+        <div class="hero-registro">
+            <div class="contenedor">
+                <h2>Registro Cliente</h2>
+                <form th:action="@{/registro/save}" th:object="${usuario}"  method="post">
+                    <div class="grid-registro">
+                        <div class="grid-registro">
+                            <div class="registro-contenido">
+                                <label for="nombres">Nombres:</label>
+                                <input type="text" th:field="*{nombres}">
+                                <p th:if="${#fields.hasErrors('nombres')}" th:errors="*{nombres}"></p>
+                            </div>
+                            <div class="registro-contenido">
+                                <label for="apellidos">Apellidos:</label> 
+                                <input type="text" th:field="*{apellidos}">
+								<p th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}"></p>
+                            </div>
+                            <div class="registro-contenido">
+                                <label for="correo">Correo:</label> 
+                                <input type="text" th:field="*{correo}">
+								<p th:if="${#fields.hasErrors('correo')}" th:errors="*{correo}"></p>
+                            </div>
+                            <div class="registro-contenido">
+                                <label for="telefono">Telefono:</label> 
+								<input type="text" th:field="*{telefono}">
+								<p th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}"></p>
+                            </div>
+                            <div class="registro-contenido">
+                                <label for="username">Username:</label> <input type="text"
+								th:field="*{username}">
+								<p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
+                            </div>
+                            <div class="registro-contenido">
+                                <label for="clave">Contraseña:</label> 
+                                <input type="password" th:field="*{clave}">
+								<p th:if="${#fields.hasErrors('clave')}" th:errors="*{clave}"></p>
+                            </div>
+							<div class="checkbox">
+                                <input type="checkbox" id="recordar" name="recordar" value="1">
+                                <label for="recordar">Aceptar Términos & Condiciones</label>
+                       		</div>
+                        </div>
+                        
+                        <div>
+                            <div class="content_uploader">
+                                <img class="img-defecto" src="img/2803242.jpg" alt="">
+                                <img class="img" src="" alt="">
+                                <input class="filefield" type="file" th:field="*{imagen}">
+                                <div class="upload">
+                                    <i class="fas fa-upload"></i>
+                                    <p class="select_bottom">Subir Imagen</p>
+                                </div>
+                            </div>
+                            <div class="advertencia">
+                                <i class="fas fa-exclamation"></i>
+                                <p>Se le recomienda cambiar su contraseña luego del registro.</p>
+                            </div>
+                            <div class="right-text">
+                                <input type="submit" value="Registrar">
+                            </div>
+                            
+                        </div>
+                        <input type="hidden" th:field="*{codigo}">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
-				<div>
-					<label for="apellidos">Apellidos:</label> <input type="text"
-						th:field="*{apellidos}">
-					<p th:if="${#fields.hasErrors('apellidos')}" th:errors="*{apellidos}"></p>
-				</div>
-
-				<div>
-					<label for="dni">DNI:</label> <input type="text"
-						th:field="*{dni}">
-					<p th:if="${#fields.hasErrors('dni')}" th:errors="*{dni}"></p>
-				</div>
-				
-				<div>
-					<label for="correo">Correo:</label> <input type="text"
-						th:field="*{correo}">
-					<p th:if="${#fields.hasErrors('correo')}" th:errors="*{correo}"></p>
-				</div>
-				
-				<div>
-					<label for="telefono">Telefono:</label> <input type="text"
-						th:field="*{telefono}">
-					<p th:if="${#fields.hasErrors('telefono')}" th:errors="*{telefono}"></p>
-				</div>
-
-				<div>
-					<label for="username">Username:</label> <input type="text"
-						th:field="*{username}">
-					<p th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
-				</div>
-				
-				<div>
-					<label for="clave">Contraseña:</label> <input type="password"
-						th:field="*{clave}">
-					<p th:if="${#fields.hasErrors('clave')}" th:errors="*{clave}"></p>
-				</div>
-				
-				<div>
-					<input type="submit" value="Registro"></input>
-				</div>
-
-				<input type="hidden" th:field="*{codigo}">
-			</div>
-		</form>
-	</div>
+    <script th:src="@{/js/app.js}"></script>
 </body>
+
 
 </html>
